CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(TDengine)

INCLUDE_DIRECTORIES(${TD_COMMUNITY_DIR}/src/inc)
INCLUDE_DIRECTORIES(${TD_COMMUNITY_DIR}/src/client/inc)
INCLUDE_DIRECTORIES(${TD_OS_DIR}/inc)
INCLUDE_DIRECTORIES(inc)

IF ((TD_LINUX_64) OR (TD_LINUX_32 AND TD_ARM))
  AUX_SOURCE_DIRECTORY(. SRC)
  # oem begin
  ADD_EXECUTABLE(powerdump ${SRC})
  TARGET_LINK_LIBRARIES(powerdump taos_static)
  # oem end
ENDIF ()
